# htmlrec

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: publish.yml
assets/: demo.webm
npm/: build.mjs
npm/htmlrec/: package.json
patches/: multi-progressbar+0.1.0.patch
skills/htmlrec/: SKILL.md
skills/htmlrec/references/: example.html
src/: cli.rs  colors.rs  inject.rs  main.rs  patched.rs  sys.rs
src/abstraction/: chrome.rs  ffmpeg.rs  mod.rs  progress.rs  renderer.rs
src/commands/: mod.rs  prelude.rs  render.rs
src/ui/: mod.rs  progressbar.rs
