[package]
name = "htmlrec"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hrec"
path = "src/main.rs"

[dependencies]
chromiumoxide = { version = "0.9.1" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
enum_variant_type = "0.4"
evt-trait-object = "0.1"
futures = "0.3"
tempfile = "3"
strum = { version = "0.28", features = ["derive"] }
derive_builder = "0.20"
supercli = { version = "0.1", features = ["clap"] }
