[package]
name = "htmlrec"
version = "0.1.1"
edition = "2021"
description = "Render HTML animations to video — frame-perfect, headless and deterministic."
license = "MIT OR Apache-2.0"

[[bin]]
name = "hrec"
path = "src/main.rs"

[features]
default = []
dev = []

[dependencies]
chromiumoxide = { version = "0.9.1" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
enum_variant_type = "0.4"
evt-trait-object = "0.1"
futures = "0.3"
tempfile = "3"
strum = { version = "0.28", features = ["derive"] }
derive_builder = "0.20"
supercli = { version = "0.1", features = ["clap"] }
multi-progressbar = "0.1.0"
dsplce-co-multi-progressbar = { version = "0.1.0-polishes" }
atty = "0.2"
unicode-truncate = "2.0"

[package.metadata.patch]
crates = ["multi-progressbar"]

[patch.crates-io.multi-progressbar]
path = "./target/patch/multi-progressbar-0.1.0"
